# Nvim-Zura-Highliter

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  ast.txt  binding.gyp  go.mod  grammar.js  main.zu  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json  zura-highlight.vim
bindings/c/: tree-sitter-zura.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_zura/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterZura/: zura.h
bindings/swift/TreeSitterZuraTests/: TreeSitterZuraTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
